--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "react-froala-wysiwyg": "^3.1.1-1",
+    "redux-persist": "^6.0.0",
     "socket.io": "^2.3.0"
   }
 }
