--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "http-proxy-middleware": "^1.0.3",
+    "luxon": "^1.24.1",
     "material-icons-react": "^1.0.4",
     "mdbreact": "^4.26.1",
     "react": "^16.13.1",
@@ -43,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
